k8s/labexercises/usermanagement.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-usermanagement-sc
spec:
  selector:
    app: usermanagement
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermanagement
  labels:
    app: usermanagement
spec:
  selector:
    matchLabels:
      app: usermanagement
  replicas: 1
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app: usermanagement
    spec:
      #Always, OnFailure, and Never
      restartPolicy: "Always"
      terminationGracePeriodSeconds: 30
      containers:
        - name: usermanagement
          image: "tiagoferreira2018/usermngdemo:1.0-SNAPSHOT"
          #Always, IfNotPresent
          imagePullPolicy: "Always"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 1
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 2
            periodSeconds: 30
            failureThreshold: 8
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources: {}
