k8s/labexercises/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /user(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: client-usermanagement-sc
                port:
                  number: 8080
          - path: /book(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: client-bookmanagement-sc
                port:
                  number: 8080
          - path: /reservation(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: client-reservationmanagement-sc
                port:
                  number: 8080
